# rustling

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python.yml  release.yml  rust.yml
benchmarks/: README.md  realistic.py  run_wordseg.py  scaling.py
benchmarks/common/: __init__.py  optional_imports.py
benchmarks/taggers/: realistic.py  run_tagger.py  run_tagger_english.py  scaling.py
benchmarks/wordseg/: realistic.py  run_wordseg.py  scaling.py
python/docs/: README.md  api.rst  conf.py  index.rst  pos_tagging.rst  requirements.txt  word_segmentation.rst
python/rustling/: __init__.py
python/rustling/taggers/: __init__.py  __init__.pyi
python/rustling/wordseg/: __init__.py  __init__.pyi
python/tests/: test_averaged_perceptron_tagger.py  test_longest_string_matching.py  test_random_segmenter.py
src/: lib.rs  trie.rs
src/taggers/: averaged_perceptron_tagger.rs  mod.rs
src/wordseg/: longest_string_matching.rs  mod.rs  random_segmenter.rs
