[package]
name = "rustling"
version = "0.3.0"
edition = "2024"
description = "A blazingly fast library for computational linguistics"
license = "MIT"
repository = "https://github.com/jacksonllee/rustling"
documentation = "https://docs.rs/rustling"
readme = "README.md"
keywords = ["nlp", "linguistics", "text-processing", "word-segmentation"]
categories = ["text-processing", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustling"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3-py310"] }
rand = "0.9"
rayon = "1.10"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
extension-module = ["pyo3/extension-module"]
